# mack

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  ci.yml  flake8.yml  ruff.yml
docs/: gen_ref_pages.py
mack/: __init__.py
old_table/: .part-00000-096fed80-c5d1-46cc-889f-c23138e7d7a5-c000.snappy.parquet.crc  .part-00004-fcd87f3e-f409-49fa-b998-b609ade2677d-c000.snappy.parquet.crc  .part-00009-2e8b34b8-590d-461c-8ad3-f0bcd78b408a-c000.snappy.parquet.crc  part-00000-096fed80-c5d1-46cc-889f-c23138e7d7a5-c000.snappy.parquet  part-00004-fcd87f3e-f409-49fa-b998-b609ade2677d-c000.snappy.parquet  part-00009-2e8b34b8-590d-461c-8ad3-f0bcd78b408a-c000.snappy.parquet
old_table/_delta_log/: .00000000000000000000.json.crc
reference/SUMMARY/: index.html
reference/mack/: index.html
search/: search_index.json
tests/: test_public_interface.py
